# SurfAlarm

./: .gitignore  CGenAlg.h  ImageManager.cpp  ImageManager.h  Main.cpp  Makefile  Makefile.am  Makefile.in  NeuronalNet.h  Parameter.cpp  README.md  Sample.h  SurfAlarm  SurfAlarm_i386  aclocal.m4  build.sh  compile  config.status  configure  configure.ac  configure.scan  link  linki386  params.ini  surfalarm  utils.cpp
.deps/: CGenAlg.Po  Controller.Po  ImageManager.Po  Main.Po  NeuronalNet.Po  Parameter.Po  Sample.Po  utils.Po
Genoms/: maxGenom - Kopie.gen
RssServer/: core  server
SurfAlarm/: .gitignore
SurfAlarm/SurfAlarm/: .gitignore  CGenAlg.cpp  Controller.cpp  Controller.h  ImageManager.h  Main.cpp  NeuronalNet.cpp  Parameter.h  ResponseState.h  Sample.cpp  Sample.h  params.ini  utils.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
eclipse/RssServer/: .classpath  .project
eclipse/RssServer/WebContent/WEB-INF/: web.xml
eclipse/RssServer/resources/ch/beni/rss/: rsstemplate.xml
eclipse/RssServer/src/ch/beni/rss/: RssServlet.java
eclipse/Servers/Tomcat v8.0 Server at localhost-config/: server.xml
release/: RssServer.war  maxGenom.gen  params.ini  surfalarm
