AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = surfalarm
surfalarm_SOURCES = ResponseState.h CGenAlg.h CGenAlg.cpp Controller.h Controller.cpp ImageManager.h ImageManager.cpp Main.cpp NeuronalNet.h NeuronalNet.cpp Parameter.h Parameter.cpp Sample.h Sample.cpp utils.h utils.cpp

surfalarmdir = ./
surfalarm_DATA = params.ini
dist_surfalarm_DATA = params.ini
